--- a/src/pages/Main/styles.css
+++ b/src/pages/Main/styles.css
@@ -17,8 +17,8 @@
 }
 
 .card .card-body {
-    width: 420px;
-    height: 720px;
+    width: 380px;
+    height: 600px;
     background: #B58A63;
     position: relative;
 }
@@ -29,7 +29,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100px;
+    height: 80px;
 }
 
 .card .card-body .card-header  .card-header-icons {
@@ -44,13 +44,14 @@
 }
 
 .card .card-body .card-header  .card-header-icons li img {
-    width: 34px;
+    width: 24px;
 }
 
 .card .card-body .card-header  .card-header-icons li p {
     color: #DDD562;
     margin-top: 5px;
-    font-size: 18px;
+    font-size: 14px;
+    text-align: center;
 }
 
 .card .card-body .card-footer {
@@ -59,7 +60,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 100px;
+    height: 80px;
 }
 
 .card  .card-body .card-main {
@@ -74,8 +75,8 @@
 .card  .card-body .card-main .card-main-image {
     margin-top: 15px;
     position: relative;
-    width: 310px;
-    height: 300px;
+    width: 260px;
+    height: 250px;
     background: #1E1C0D;
     border-radius: 40px;
 }
@@ -116,15 +117,15 @@
 
 .card  .card-body .card-main .card-main-image .character-image-back .text-card-back {
     transform: rotateY(180deg);
-    width: 260px;
-    margin-top: 50px;
+    width: 200px;
+    margin-top: 40px;
     color: #261302;
-    font-size: 18px;
+    font-size: 16px;
     text-align: center;
 }
 
 .card  .card-body .card-main .card-main-image .character-image-front img {
-    width: 240px;
+    width: 200px;
 }
 
 .card  .card-body .card-main .card-main-image .character-image-front img:active {
@@ -155,12 +156,12 @@
     color: #fff;
     text-align: center;
     width: 320px;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .card  .card-body .card-main .character-name {
     margin: 25px 0 0 0;
-    font-size: 24px;
+    font-size: 16px;
 }
 
 .card .card-body .card-footer .options,
@@ -207,13 +208,14 @@
 
 .card .card-body .card-footer .options .btn-1:hover,
 .card .card-body .card-footer .options .btn-2:hover {
-    transform: translateY(-20px);
+    transform: translateY(-15px);
     /*transform: scale(1.2, 1.2);*/
 }
 
 .card .card-body .card-footer .options .btn-1 p,
 .card .card-body .card-footer .options .btn-2 p {
-    width: 150px;
+    width: 130px;
+    font-size: 14px;
 }
 
 .card .card-body .card-footer .btn-next {
@@ -227,10 +229,10 @@
     cursor: pointer;
     transition: all .3s ease-out;
     background: #0D0D1D;
-    font-size: 30px;
+    font-size: 24px;
 }
 
 .card .card-body .card-footer .btn-next:hover {
-    transform: translateY(-20px);
+    transform: translateY(-15px);
 }
 
