--- a/src/pages/Main/styles.css
+++ b/src/pages/Main/styles.css
@@ -29,7 +29,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 80px;
+    height: 90px;
 }
 
 .card .card-body .card-header  .card-header-icons {
@@ -52,6 +52,26 @@
     margin-top: 5px;
     font-size: 14px;
     text-align: center;
+}
+
+.alterado::before {
+    display: block;
+    text-align: center;
+    content: '•';
+    font-size: 30px;
+    color:  #DDD562;
+    margin-top: -20px;
+    visibility: visible;
+}
+
+.alterado-hidden::before {
+    display: block;
+    text-align: center;
+    content: '•';
+    font-size: 30px;
+    color:  #DDD562;
+    margin-top: -20px;
+    visibility: hidden;
 }
 
 .card .card-body .card-footer {
@@ -85,12 +105,21 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    transform-style: preserve-3d;
-    transition: transform 0.8s;
     cursor: pointer;
 }
 
-.card .card-body .card-main .card-main-image .character-image-front,
+.card .card-body .card-main .card-main-image .character-image-front {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding: 50px 0 0 0;
+    display: flex;
+    justify-content: center;
+    border-radius: 40px;
+    border: 3px solid #C5AD5A;
+}
+
+/*.card .card-body .card-main .card-main-image .character-image-front,
 .card .card-body .card-main .card-main-image .character-image-back {
     position: absolute;
     width: 100%;
@@ -122,7 +151,7 @@
     color: #261302;
     font-size: 16px;
     text-align: center;
-}
+}*/
 
 .card  .card-body .card-main .card-main-image .character-image-front img {
     width: 200px;
